--- a/practice.html
+++ b/practice.html
@@ -16,7 +16,7 @@
 
         <div class="row" style="border:1px solid green;height:600px">
 
-            <div class="col-md-4" style="border:1px solid black">
+            <div class="col-sm-4" style="border:1px solid black">
 
         <div class="logo">
             <h1 style="text-decoration:underline"><span style="color:red">A</span>RSENE</h1>
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8" style="border:1px solid red;"></div>
+            <div class="col-sm-8" style="border:1px solid red;"></div>
     
         </div>
     </div>
