--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
    <div class="container" style="height:650px">                                                                
     <div class="main content"></div>
     <div class="row" style="height:650px;">
-    <div class="col-md-4 background-color" style="height:650px">
+    <div class="col-sm-4 background-color" style="height:650px">
         <div class="logo">
             <h1><u><span style="color:red">A</span>RSENE</u></h1>
         </div>
